--- a/contact.html
+++ b/contact.html
@@ -39,147 +39,15 @@
         }
     }
     </script>
+    <link rel="stylesheet" href="style.css">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
-    <style>
-        :root {
-            --primary: #1B2E5C;
-            --primary-light: #EDF1F7;
-            --primary-dark: #0F1D3D;
-            --accent: #C5A55A;
-            --accent-light: #FFF8F0;
-            --accent-hover: #D4B76A;
-            --text: #333333;
-            --text-muted: #777777;
-            --text-light: #999999;
-            --bg: #FFF8F0;
-            --white: #FFFFFF;
-            --border: #E8E0D4;
-            --shadow-sm: 0 2px 8px rgba(0,0,0,0.04);
-            --shadow: 0 8px 24px rgba(0,0,0,0.06);
-            --shadow-lg: 0 16px 40px rgba(0,0,0,0.08);
-            --radius: 20px;
-            --radius-lg: 24px;
-        }
-        *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
-        html { scroll-behavior: smooth; -webkit-text-size-adjust: 100%; }
-        body { font-family: 'Noto Sans JP', -apple-system, BlinkMacSystemFont, sans-serif; line-height: 1.8; color: var(--text); background: var(--white); font-size: 16px; -webkit-font-smoothing: antialiased; }
-        img { max-width: 100%; height: auto; }
-        a { color: inherit; text-decoration: none; }
-
-        .header { position: fixed; top: 0; left: 0; right: 0; background: rgba(27,46,92,0.97); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); border-bottom: none; z-index: 1000; transition: box-shadow 0.3s; }
-        .header.scrolled { box-shadow: 0 4px 12px rgba(0,0,0,0.15); }
-        .nav { max-width: 1100px; margin: 0 auto; padding: 0 24px; display: flex; justify-content: space-between; align-items: center; height: 72px; }
-        .logo { display: flex; align-items: center; gap: 10px; font-weight: 700; font-size: 1.25rem; color: var(--white); }
-        .logo img { flex-shrink: 0; }
-        .nav-links { display: flex; list-style: none; gap: 8px; }
-        .nav-links a { display: block; padding: 8px 16px; font-size: 0.9rem; font-weight: 500; color: rgba(255,255,255,0.85); border-radius: 8px; transition: color 0.2s, background 0.2s; }
-        .nav-links a:hover, .nav-links a:focus-visible { color: #FFFFFF; background: rgba(255,255,255,0.12); }
-        .nav-cta { display: inline-flex; align-items: center; gap: 6px; padding: 10px 24px; background: var(--accent); color: var(--white) !important; border-radius: 50px; font-weight: 600; font-size: 0.9rem; transition: background 0.2s, transform 0.2s; }
-        .nav-cta:hover { background: #B8943D; transform: translateY(-1px); }
-        .hamburger { display: none; background: none; border: none; cursor: pointer; padding: 8px; border-radius: 8px; color: #FFFFFF; }
-        .hamburger:hover { background: rgba(255,255,255,0.12); }
-        .hamburger svg { display: block; }
-
-        .mobile-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.4); z-index: 999; opacity: 0; visibility: hidden; pointer-events: none; transition: opacity 0.3s, visibility 0.3s; }
-        .mobile-overlay.active { opacity: 1; visibility: visible; pointer-events: auto; }
-        .mobile-menu { display: none; position: fixed; top: 0; right: -280px; width: 280px; height: 100%; background: var(--white); z-index: 1001; padding: 80px 24px 24px; transition: right 0.3s ease; box-shadow: var(--shadow-lg); }
-        .mobile-menu.active { right: 0; }
-        .mobile-menu a { display: block; padding: 14px 16px; font-size: 1rem; font-weight: 500; color: var(--text); border-radius: 8px; margin-bottom: 4px; transition: background 0.2s; }
-        .mobile-menu a:hover { background: var(--accent-light); color: var(--primary); }
-        .mobile-menu .mobile-cta { display: block; text-align: center; margin-top: 16px; padding: 14px; background: var(--accent); color: var(--white); border-radius: 12px; font-weight: 600; }
-        .mobile-close { position: absolute; top: 20px; right: 20px; background: none; border: none; font-size: 24px; cursor: pointer; padding: 8px; border-radius: 8px; color: var(--text-muted); }
-
-        .page-hero { padding: 140px 24px 80px; background: linear-gradient(160deg, var(--accent-light) 0%, var(--white) 50%, var(--primary-light) 100%); text-align: center; }
-        .page-hero-inner { max-width: 780px; margin: 0 auto; }
-        .page-hero .breadcrumb { font-size: 0.85rem; color: var(--text-muted); margin-bottom: 20px; }
-        .page-hero .breadcrumb a { color: var(--accent); }
-        .page-hero .breadcrumb a:hover { text-decoration: underline; }
-        .page-hero h1 { font-size: clamp(1.8rem, 5vw, 2.8rem); font-weight: 700; line-height: 1.4; margin-bottom: 16px; }
-        .page-hero .hero-desc { font-size: clamp(1rem, 2.5vw, 1.15rem); color: var(--text-muted); line-height: 1.9; }
-
-        .section { padding: 96px 24px; }
-        .section-alt { background: var(--bg); }
-        .section-header { text-align: center; margin-bottom: 56px; }
-        .section-label { display: inline-block; font-size: 0.8rem; font-weight: 600; text-transform: uppercase; letter-spacing: 0.1em; color: var(--accent); margin-bottom: 12px; }
-        .section-title { font-size: clamp(1.6rem, 4vw, 2.2rem); font-weight: 700; margin-bottom: 16px; letter-spacing: -0.01em; }
-        .section-desc { font-size: 1.05rem; color: var(--text-muted); max-width: 560px; margin: 0 auto; }
-        .container { max-width: 1100px; margin: 0 auto; }
-
-        /* Contact */
-        .contact-wrapper { max-width: 640px; margin: 0 auto; }
-        .contact-methods { display: grid; grid-template-columns: 1fr 1fr; gap: 16px; margin-bottom: 40px; }
-        .contact-method { background: var(--white); border: 1px solid var(--border); border-radius: var(--radius); padding: 24px; text-align: center; transition: all 0.2s; }
-        .contact-method:hover { border-color: var(--accent); box-shadow: var(--shadow); }
-        .contact-method svg { width: 32px; height: 32px; color: var(--accent); margin-bottom: 8px; }
-        .contact-method .method-label { display: block; font-size: 0.8rem; color: var(--text-light); margin-bottom: 4px; }
-        .contact-method .method-value { font-size: 1.1rem; font-weight: 600; color: var(--text); }
-
-        .contact-form { background: var(--white); border: 1px solid var(--border); border-radius: var(--radius-lg); padding: 40px; }
-        .contact-form h3 { font-size: 1.2rem; font-weight: 600; margin-bottom: 24px; text-align: center; }
-        .form-row { display: grid; grid-template-columns: 1fr 1fr; gap: 16px; }
-        .form-group { margin-bottom: 20px; }
-        .form-group label { display: block; margin-bottom: 6px; font-size: 0.9rem; font-weight: 500; color: var(--text); }
-        .form-group .required { color: #E53E3E; font-size: 0.75rem; margin-left: 4px; }
-        .form-group input, .form-group textarea, .form-group select { width: 100%; padding: 12px 16px; border: 1.5px solid var(--border); border-radius: 10px; font-family: inherit; font-size: 1rem; color: var(--text); background: var(--white); transition: border-color 0.2s, box-shadow 0.2s; -webkit-appearance: none; }
-        .form-group input:focus, .form-group textarea:focus, .form-group select:focus { outline: none; border-color: var(--primary); box-shadow: 0 0 0 3px rgba(27,46,92,0.1); }
-        .form-group textarea { resize: vertical; min-height: 120px; }
-        .form-group input.error, .form-group textarea.error, .form-group select.error { border-color: #E53E3E; }
-        .form-error { color: #E53E3E; font-size: 0.8rem; margin-top: 4px; min-height: 0; }
-
-        .submit-btn { width: 100%; padding: 16px; background: var(--accent); color: var(--white); border: none; border-radius: 12px; font-size: 1.05rem; font-weight: 600; cursor: pointer; font-family: inherit; transition: all 0.2s; }
-        .submit-btn:hover { background: #B8943D; }
-        .submit-btn:disabled { opacity: 0.5; cursor: not-allowed; }
-        .form-note { text-align: center; font-size: 0.8rem; color: var(--text-light); margin-top: 16px; }
-
-        /* Footer */
-        .footer { background: var(--primary); color: rgba(255,255,255,0.7); padding: 56px 24px 32px; }
-        .footer-inner { max-width: 1100px; margin: 0 auto; display: grid; grid-template-columns: 2fr 1fr 1fr; gap: 48px; margin-bottom: 40px; }
-        .footer-brand .logo { color: var(--white); margin-bottom: 12px; }
-        .footer-brand p { font-size: 0.9rem; line-height: 1.8; }
-        .footer-nav h4, .footer-contact h4 { color: var(--white); font-size: 0.9rem; font-weight: 600; margin-bottom: 16px; }
-        .footer-nav a { display: block; padding: 4px 0; font-size: 0.9rem; transition: color 0.2s; }
-        .footer-nav a:hover { color: var(--white); }
-        .footer-contact p { font-size: 0.9rem; margin-bottom: 8px; }
-        .footer-bottom { border-top: 1px solid rgba(255,255,255,0.1); padding-top: 24px; text-align: center; font-size: 0.8rem; max-width: 1100px; margin: 0 auto; }
-
-        .scroll-top { position: fixed; bottom: 24px; right: 24px; width: 48px; height: 48px; border-radius: 50%; background: var(--accent); color: var(--white); border: none; font-size: 20px; cursor: pointer; z-index: 900; opacity: 0; visibility: hidden; transition: all 0.3s; box-shadow: var(--shadow); display: flex; align-items: center; justify-content: center; }
-        .scroll-top.visible { opacity: 1; visibility: visible; }
-        .scroll-top:hover { background: #B8943D; transform: translateY(-2px); }
-
-        .animate { opacity: 0; transform: translateY(24px); transition: opacity 0.6s ease, transform 0.6s ease; }
-        .animate.in { opacity: 1; transform: translateY(0); }
-        @media (prefers-reduced-motion: reduce) { .animate { opacity: 1; transform: none; transition: none; } }
-
-        @media (max-width: 900px) {
-            .footer-inner { grid-template-columns: 1fr; gap: 32px; }
-        }
-        @media (max-width: 768px) {
-            .nav-links, .nav .nav-cta { display: none; }
-            .hamburger { display: block; }
-            .mobile-overlay, .mobile-menu { display: block; }
-            .page-hero { padding: 120px 24px 60px; }
-            .section { padding: 72px 24px; }
-            .form-row { grid-template-columns: 1fr; }
-            .contact-form { padding: 28px 20px; }
-            .contact-methods { grid-template-columns: 1fr; }
-        }
-        @media (max-width: 480px) {
-            .page-hero { padding: 108px 16px 48px; }
-            .section { padding: 56px 16px; }
-        }
-        @media print { .header, .scroll-top, .contact-form, .mobile-menu, .mobile-overlay { display: none !important; } .animate { opacity: 1 !important; transform: none !important; } .page-hero { padding-top: 40px; } }
-    </style>
-</head>
+    </head>
 <body>
 
     <header class="header" role="banner">
         <nav class="nav" aria-label="メインナビゲーション">
             <a href="index.html" class="logo" aria-label="ハッピーベル トップページ">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 36" width="32" height="32" fill="none" aria-hidden="true" style="flex-shrink:0;"><path d="M18 4c-1.5 0-2.7 1.2-2.7 2.7v.8C11.5 8.7 8.5 12.3 8.5 16.5v6L6 25v1.5h24V25l-2.5-2.5v-6c0-4.2-3-7.8-6.8-9v-.8C20.7 5.2 19.5 4 18 4z" fill="#1B2E5C"/><circle cx="18" cy="31" r="3" fill="#1B2E5C"/><ellipse cx="18" cy="22.5" rx="1.8" ry="3" fill="#C5A55A"/><circle cx="14.5" cy="17" r="1.2" fill="#C5A55A"/><circle cx="21.5" cy="17" r="1.2" fill="#C5A55A"/><path d="M14.5 20.5q1.5 2 3.5 2t3.5-2" stroke="#C5A55A" stroke-width="1" stroke-linecap="round" fill="none"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 36" width="32" height="32" fill="none" aria-hidden="true" style="flex-shrink:0;"><path d="M18 4c-1.5 0-2.7 1.2-2.7 2.7v.8C11.5 8.7 8.5 12.3 8.5 16.5v6L6 25v1.5h24V25l-2.5-2.5v-6c0-4.2-3-7.8-6.8-9v-.8C20.7 5.2 19.5 4 18 4z" fill="#2C3E6B"/><circle cx="18" cy="31" r="3" fill="#2C3E6B"/><ellipse cx="18" cy="22.5" rx="1.8" ry="3" fill="#E8845C"/><circle cx="14.5" cy="17" r="1.2" fill="#E8845C"/><circle cx="21.5" cy="17" r="1.2" fill="#E8845C"/><path d="M14.5 20.5q1.5 2 3.5 2t3.5-2" stroke="#E8845C" stroke-width="1" stroke-linecap="round" fill="none"/></svg>
                 ハッピーベル
             </a>
             <ul class="nav-links" role="list">
@@ -218,7 +86,7 @@
     </section>
 
     <!-- Wave divider -->
-    <div style="margin-top:-1px;line-height:0;overflow:hidden;background:var(--white);"><svg viewBox="0 0 1440 80" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" style="width:100%;height:60px;display:block;"><path d="M0,40 C360,80 720,0 1080,40 C1260,60 1380,50 1440,40 L1440,0 L0,0 Z" fill="var(--primary-light)" opacity="0.5"/><path d="M0,30 C240,70 480,10 720,40 C960,70 1200,10 1440,30 L1440,0 L0,0 Z" fill="var(--accent-light)"/></svg></div>
+    <div class="wave-divider"><svg viewBox="0 0 1440 80" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" ><path d="M0,40 C360,80 720,0 1080,40 C1260,60 1380,50 1440,40 L1440,0 L0,0 Z" fill="var(--primary-light)" opacity="0.5"/><path d="M0,30 C240,70 480,10 720,40 C960,70 1200,10 1440,30 L1440,0 L0,0 Z" fill="var(--accent-light)"/></svg></div>
 
     <section class="section">
         <div class="container">
@@ -289,7 +157,7 @@
         <div class="footer-inner">
             <div class="footer-brand">
                 <div class="logo">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28" width="28" height="28" fill="none" aria-hidden="true" style="flex-shrink:0;"><path d="M14 3c-1.2 0-2.1.9-2.1 2.1v.6C9 6.7 6.6 9.5 6.6 12.8v4.7L4.7 19.4v1.2h18.6v-1.2l-1.9-1.9v-4.7c0-3.3-2.4-6.1-5.3-7.1v-.6C16.1 3.9 15.2 3 14 3z" fill="#1B2E5C"/><circle cx="14" cy="24" r="2.3" fill="#1B2E5C"/><ellipse cx="14" cy="17.5" rx="1.4" ry="2.3" fill="#C5A55A"/><circle cx="11.3" cy="13.2" r=".9" fill="#C5A55A"/><circle cx="16.7" cy="13.2" r=".9" fill="#C5A55A"/><path d="M11.3 15.9q1.2 1.5 2.7 1.5t2.7-1.5" stroke="#C5A55A" stroke-width=".8" stroke-linecap="round" fill="none"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28" width="28" height="28" fill="none" aria-hidden="true" style="flex-shrink:0;"><path d="M14 3c-1.2 0-2.1.9-2.1 2.1v.6C9 6.7 6.6 9.5 6.6 12.8v4.7L4.7 19.4v1.2h18.6v-1.2l-1.9-1.9v-4.7c0-3.3-2.4-6.1-5.3-7.1v-.6C16.1 3.9 15.2 3 14 3z" fill="#2C3E6B"/><circle cx="14" cy="24" r="2.3" fill="#2C3E6B"/><ellipse cx="14" cy="17.5" rx="1.4" ry="2.3" fill="#E8845C"/><circle cx="11.3" cy="13.2" r=".9" fill="#E8845C"/><circle cx="16.7" cy="13.2" r=".9" fill="#E8845C"/><path d="M11.3 15.9q1.2 1.5 2.7 1.5t2.7-1.5" stroke="#E8845C" stroke-width=".8" stroke-linecap="round" fill="none"/></svg>
                     ハッピーベル
                 </div>
                 <p>介護施設・調剤薬局の経営サポートと<br>人材育成研修を通じて、<br>地域の医療・介護を支えます。</p>
