--- a/index.html
+++ b/index.html
@@ -44,134 +44,16 @@
     </script>
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 
-    <style>
-        :root {
-            --primary: #1B2E5C;
-            --primary-light: #EDF1F7;
-            --primary-dark: #0F1D3D;
-            --accent: #C5A55A;
-            --accent-light: #FFF8F0;
-            --accent-hover: #D4B76A;
-            --text: #333333;
-            --text-muted: #777777;
-            --text-light: #999999;
-            --bg: #FFF8F0;
-            --white: #FFFFFF;
-            --border: #E8E0D4;
-            --shadow-sm: 0 2px 8px rgba(0,0,0,0.04);
-            --shadow: 0 8px 24px rgba(0,0,0,0.06);
-            --shadow-lg: 0 16px 40px rgba(0,0,0,0.08);
-            --radius: 20px;
-            --radius-lg: 24px;
-        }
-        *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
-        html { scroll-behavior: smooth; -webkit-text-size-adjust: 100%; }
-        body { font-family: 'Noto Sans JP', -apple-system, BlinkMacSystemFont, sans-serif; line-height: 1.8; color: var(--text); background: var(--white); font-size: 16px; -webkit-font-smoothing: antialiased; min-height: 100dvh; display: flex; flex-direction: column; }
-        img { max-width: 100%; height: auto; }
-        a { color: inherit; text-decoration: none; }
-
-        /* HEADER */
-        .header { position: fixed; top: 0; left: 0; right: 0; background: rgba(27,46,92,0.97); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); border-bottom: none; z-index: 1000; transition: box-shadow 0.3s; }
-        .header.scrolled { box-shadow: 0 4px 12px rgba(0,0,0,0.15); }
-        .nav { max-width: 1100px; margin: 0 auto; padding: 0 24px; display: flex; justify-content: space-between; align-items: center; height: 72px; }
-        .logo { display: flex; align-items: center; gap: 10px; font-weight: 700; font-size: 1.25rem; color: var(--white); }
-        .logo img { flex-shrink: 0; }
-        .nav-links { display: flex; list-style: none; gap: 8px; }
-        .nav-links a { display: block; padding: 8px 16px; font-size: 0.9rem; font-weight: 500; color: rgba(255,255,255,0.85); border-radius: 8px; transition: color 0.2s, background 0.2s; }
-        .nav-links a:hover, .nav-links a:focus-visible { color: #FFFFFF; background: rgba(255,255,255,0.12); }
-        .nav-cta { display: inline-flex; align-items: center; gap: 6px; padding: 10px 24px; background: var(--accent); color: var(--white) !important; border-radius: 50px; font-weight: 600; font-size: 0.9rem; transition: background 0.2s, transform 0.2s; }
-        .nav-cta:hover { background: #B8943D; transform: translateY(-1px); }
-        .hamburger { display: none; background: none; border: none; cursor: pointer; padding: 8px; border-radius: 8px; color: #FFFFFF; }
-        .hamburger:hover { background: rgba(255,255,255,0.12); }
-        .hamburger svg { display: block; }
-
-        /* MOBILE MENU */
-        .mobile-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.4); z-index: 999; opacity: 0; visibility: hidden; pointer-events: none; transition: opacity 0.3s, visibility 0.3s; }
-        .mobile-overlay.active { opacity: 1; visibility: visible; pointer-events: auto; }
-        .mobile-menu { display: none; position: fixed; top: 0; right: -280px; width: 280px; height: 100%; background: var(--white); z-index: 1001; padding: 80px 24px 24px; transition: right 0.3s ease; box-shadow: var(--shadow-lg); }
-        .mobile-menu.active { right: 0; }
-        .mobile-menu a { display: block; padding: 14px 16px; font-size: 1rem; font-weight: 500; color: var(--text); border-radius: 8px; margin-bottom: 4px; transition: background 0.2s; }
-        .mobile-menu a:hover { background: var(--accent-light); color: var(--primary); }
-        .mobile-menu .mobile-cta { display: block; text-align: center; margin-top: 16px; padding: 14px; background: var(--accent); color: var(--white); border-radius: 12px; font-weight: 600; }
-        .mobile-close { position: absolute; top: 20px; right: 20px; background: none; border: none; font-size: 24px; cursor: pointer; padding: 8px; border-radius: 8px; color: var(--text-muted); }
-
-        /* HERO */
-        .hero { padding: 120px 24px 64px; background: linear-gradient(160deg, var(--accent-light) 0%, var(--white) 60%, var(--primary-light) 100%); text-align: center; }
-        .hero h1 { font-size: clamp(1.6rem, 4.5vw, 2.4rem); font-weight: 700; line-height: 1.4; margin-bottom: 12px; }
-        .hero h1 em { font-style: normal; color: var(--accent); }
-        .hero p { font-size: 1rem; color: var(--text-muted); margin-bottom: 0; }
-
-        /* WAVE DIVIDER — hero gradient to white services bg */
-        .wave-divider { margin-top: -1px; line-height: 0; overflow: hidden; background: var(--white); }
-        .wave-divider svg { width: 100%; height: 60px; display: block; }
-
-        /* SERVICE CARDS */
-        .services { padding: 16px 24px 56px; max-width: 960px; margin: 0 auto; display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; }
-        .svc { display: flex; flex-direction: column; align-items: center; text-align: center; background: var(--white); border: 1px solid var(--border); border-radius: var(--radius); padding: 32px 24px 28px; transition: box-shadow 0.25s, transform 0.25s; }
-        .svc:hover { box-shadow: var(--shadow-lg); transform: translateY(-3px); }
-        .svc-icon { width: 56px; height: 56px; background: var(--accent-light); border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-bottom: 16px; }
-        .svc-icon svg { width: 28px; height: 28px; color: var(--accent); }
-        .svc h3 { font-size: 1.05rem; font-weight: 600; margin-bottom: 8px; }
-        .svc p { font-size: 0.9rem; color: var(--text-muted); line-height: 1.7; margin-bottom: 16px; flex: 1; }
-        .svc-link { font-size: 0.9rem; font-weight: 600; color: var(--accent); display: inline-flex; align-items: center; gap: 4px; }
-
-        /* CTA SECTION */
-        .cta-section { padding: 72px 24px; text-align: center; background: linear-gradient(160deg, var(--accent-light), var(--primary-light)); }
-        .cta-section h2 { font-size: clamp(1.5rem, 3.5vw, 2rem); font-weight: 700; margin-bottom: 16px; }
-        .cta-section p { font-size: 1.05rem; color: var(--text-muted); margin-bottom: 32px; }
-        .btn { display: inline-flex; align-items: center; justify-content: center; gap: 8px; padding: 14px 32px; border-radius: 50px; font-weight: 600; font-size: 1rem; transition: all 0.2s; border: none; cursor: pointer; font-family: inherit; }
-        .btn-primary { background: var(--accent); color: var(--white); box-shadow: 0 4px 16px rgba(197,165,90,0.3); }
-        .btn-primary:hover { background: #B8943D; transform: translateY(-2px); box-shadow: 0 6px 20px rgba(197,165,90,0.35); }
-
-        /* FOOTER */
-        .footer { background: var(--primary); color: rgba(255,255,255,0.7); padding: 56px 24px 32px; margin-top: auto; }
-        .footer-inner { max-width: 1100px; margin: 0 auto; display: grid; grid-template-columns: 2fr 1fr 1fr; gap: 48px; margin-bottom: 40px; }
-        .footer-brand .logo { color: var(--white); margin-bottom: 12px; }
-        .footer-brand p { font-size: 0.9rem; line-height: 1.8; }
-        .footer-nav h4, .footer-contact h4 { color: var(--white); font-size: 0.9rem; font-weight: 600; margin-bottom: 16px; }
-        .footer-nav a { display: block; padding: 4px 0; font-size: 0.9rem; transition: color 0.2s; }
-        .footer-nav a:hover { color: var(--white); }
-        .footer-contact p { font-size: 0.9rem; margin-bottom: 8px; }
-        .footer-bottom { border-top: 1px solid rgba(255,255,255,0.1); padding-top: 24px; text-align: center; font-size: 0.8rem; max-width: 1100px; margin: 0 auto; }
-
-        /* SCROLL TOP */
-        .scroll-top { position: fixed; bottom: 24px; right: 24px; width: 48px; height: 48px; border-radius: 50%; background: var(--accent); color: var(--white); border: none; font-size: 20px; cursor: pointer; z-index: 900; opacity: 0; visibility: hidden; transition: all 0.3s; box-shadow: var(--shadow); display: flex; align-items: center; justify-content: center; }
-        .scroll-top.visible { opacity: 1; visibility: visible; }
-        .scroll-top:hover { background: #B8943D; transform: translateY(-2px); }
-
-        /* ANIMATIONS */
-        .animate { opacity: 0; transform: translateY(24px); transition: opacity 0.6s ease, transform 0.6s ease; }
-        .animate.in { opacity: 1; transform: translateY(0); }
-        @media (prefers-reduced-motion: reduce) { .animate { opacity: 1; transform: none; transition: none; } }
-
-        /* RESPONSIVE */
-        @media (max-width: 768px) {
-            .nav-links, .nav .nav-cta { display: none; }
-            .hamburger { display: block; }
-            .mobile-overlay, .mobile-menu { display: block; }
-            .services { grid-template-columns: 1fr; max-width: 400px; }
-            .footer-inner { grid-template-columns: 1fr; gap: 32px; }
-        }
-        @media (max-width: 480px) {
-            .hero { padding: 108px 16px 48px; }
-            .services { padding: 12px 16px 40px; }
-            .cta-section { padding: 56px 16px; }
-            .btn { width: 100%; justify-content: center; }
-        }
-        @media print { .header, .scroll-top, .mobile-menu, .mobile-overlay { display: none !important; } .animate { opacity: 1 !important; transform: none !important; } }
-    </style>
-</head>
+    </head>
 <body>
 
     <!-- Header -->
     <header class="header" role="banner">
         <nav class="nav" aria-label="メインナビゲーション">
             <a href="index.html" class="logo" aria-label="ハッピーベル トップページ">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 36" width="32" height="32" fill="none" aria-hidden="true" style="flex-shrink:0;"><path d="M18 4c-1.5 0-2.7 1.2-2.7 2.7v.8C11.5 8.7 8.5 12.3 8.5 16.5v6L6 25v1.5h24V25l-2.5-2.5v-6c0-4.2-3-7.8-6.8-9v-.8C20.7 5.2 19.5 4 18 4z" fill="#1B2E5C"/><circle cx="18" cy="31" r="3" fill="#1B2E5C"/><ellipse cx="18" cy="22.5" rx="1.8" ry="3" fill="#C5A55A"/><circle cx="14.5" cy="17" r="1.2" fill="#C5A55A"/><circle cx="21.5" cy="17" r="1.2" fill="#C5A55A"/><path d="M14.5 20.5q1.5 2 3.5 2t3.5-2" stroke="#C5A55A" stroke-width="1" stroke-linecap="round" fill="none"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 36" width="32" height="32" fill="none" aria-hidden="true" style="flex-shrink:0;"><path d="M18 4c-1.5 0-2.7 1.2-2.7 2.7v.8C11.5 8.7 8.5 12.3 8.5 16.5v6L6 25v1.5h24V25l-2.5-2.5v-6c0-4.2-3-7.8-6.8-9v-.8C20.7 5.2 19.5 4 18 4z" fill="#2C3E6B"/><circle cx="18" cy="31" r="3" fill="#2C3E6B"/><ellipse cx="18" cy="22.5" rx="1.8" ry="3" fill="#E8845C"/><circle cx="14.5" cy="17" r="1.2" fill="#E8845C"/><circle cx="21.5" cy="17" r="1.2" fill="#E8845C"/><path d="M14.5 20.5q1.5 2 3.5 2t3.5-2" stroke="#E8845C" stroke-width="1" stroke-linecap="round" fill="none"/></svg>
                 ハッピーベル
             </a>
             <ul class="nav-links" role="list">
@@ -206,6 +88,9 @@
     <section class="hero">
         <h1 class="animate">介護・薬局経営の課題を<br><em>現場目線</em>で解決</h1>
         <p class="animate">合同会社ハッピーベル — 埼玉県を拠点に関東エリア対応</p>
+        <div class="animate">
+            <a href="contact.html" class="btn btn-primary">無料相談はこちら</a>
+        </div>
     </section>
 
     <!-- Wave divider -->
@@ -239,12 +124,23 @@
         </a>
     </div>
 
+    <!-- CTA -->
+    <section class="cta-section">
+        <div class="container">
+            <h2 class="animate">お気軽にご相談ください</h2>
+            <p class="animate">初回相談は無料です。介護施設・調剤薬局の経営に関するお悩み、どんな小さなことでもお聞かせください。</p>
+            <div class="animate">
+                <a href="contact.html" class="btn btn-primary">お問い合わせはこちら</a>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer" role="contentinfo">
         <div class="footer-inner">
             <div class="footer-brand">
                 <div class="logo">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28" width="28" height="28" fill="none" aria-hidden="true" style="flex-shrink:0;"><path d="M14 3c-1.2 0-2.1.9-2.1 2.1v.6C9 6.7 6.6 9.5 6.6 12.8v4.7L4.7 19.4v1.2h18.6v-1.2l-1.9-1.9v-4.7c0-3.3-2.4-6.1-5.3-7.1v-.6C16.1 3.9 15.2 3 14 3z" fill="#1B2E5C"/><circle cx="14" cy="24" r="2.3" fill="#1B2E5C"/><ellipse cx="14" cy="17.5" rx="1.4" ry="2.3" fill="#C5A55A"/><circle cx="11.3" cy="13.2" r=".9" fill="#C5A55A"/><circle cx="16.7" cy="13.2" r=".9" fill="#C5A55A"/><path d="M11.3 15.9q1.2 1.5 2.7 1.5t2.7-1.5" stroke="#C5A55A" stroke-width=".8" stroke-linecap="round" fill="none"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28" width="28" height="28" fill="none" aria-hidden="true" style="flex-shrink:0;"><path d="M14 3c-1.2 0-2.1.9-2.1 2.1v.6C9 6.7 6.6 9.5 6.6 12.8v4.7L4.7 19.4v1.2h18.6v-1.2l-1.9-1.9v-4.7c0-3.3-2.4-6.1-5.3-7.1v-.6C16.1 3.9 15.2 3 14 3z" fill="#2C3E6B"/><circle cx="14" cy="24" r="2.3" fill="#2C3E6B"/><ellipse cx="14" cy="17.5" rx="1.4" ry="2.3" fill="#E8845C"/><circle cx="11.3" cy="13.2" r=".9" fill="#E8845C"/><circle cx="16.7" cy="13.2" r=".9" fill="#E8845C"/><path d="M11.3 15.9q1.2 1.5 2.7 1.5t2.7-1.5" stroke="#E8845C" stroke-width=".8" stroke-linecap="round" fill="none"/></svg>
                     ハッピーベル
                 </div>
                 <p>介護施設・調剤薬局の経営サポートと<br>人材育成研修で地域医療を支えます。</p>
@@ -271,13 +167,21 @@
         </div>
     </footer>
 
+    <button class="scroll-top" aria-label="ページ上部に戻る">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><polyline points="18 15 12 9 6 15"/></svg>
+    </button>
+
     <script>
     (function() {
         'use strict';
         var header = document.querySelector('.header');
+        var scrollTopBtn = document.querySelector('.scroll-top');
         window.addEventListener('scroll', function() {
-            header.classList.toggle('scrolled', window.pageYOffset > 50);
+            var y = window.pageYOffset;
+            header.classList.toggle('scrolled', y > 50);
+            scrollTopBtn.classList.toggle('visible', y > 400);
         }, { passive: true });
+        scrollTopBtn.addEventListener('click', function() { window.scrollTo({ top: 0, behavior: 'smooth' }); });
 
         var hamburger = document.querySelector('.hamburger');
         var overlay = document.querySelector('.mobile-overlay');
